--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
-    <string name="app_name">LifeAssistant</string>
-    <string name="search">Search</string>
+    <string name="app_name">机票助手</string>
+    <string name="search">搜索</string>
 
-    <string name="select_date">Select Date</string>
+    <string name="select_date">选择日期</string>
+    <string name="search_result">搜索结果</string>
+
+    <string name="result_empty">搜不到哦，再试试吧</string>
+    <string name="result_fail">失败了，请重试</string>
 </resources>
