--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">机票助手</string>
-    <string name="search">搜索</string>
+    <string name="login">登 录</string>
+    <string name="search">搜 索</string>
 
     <string name="select_date">选择日期</string>
     <string name="search_result">搜索结果</string>
@@ -15,4 +16,6 @@
     <string name="minute">分钟</string>
 
     <string name="price">价格</string>
+    <string name="input_account">请输入帐号</string>
+    <string name="input_password">请输入密码</string>
 </resources>
