--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">机票助手</string>
+    <string name="app_name">快省机票</string>
     <string name="search">搜索</string>
 
     <string name="select_date">选择日期</string>
@@ -15,4 +15,24 @@
     <string name="minute">分钟</string>
 
     <string name="price">价格</string>
+
+    <string-array name="weeks">
+        <item>周日</item>
+        <item>周一</item>
+        <item>周二</item>
+        <item>周三</item>
+        <item>周四</item>
+        <item>周五</item>
+        <item>周六</item>
+    </string-array>
+
+    <string name="passenger">乘机人</string>
+    <string name="contact">联系人</string>
+    <string name="contact_hint">请输入姓名</string>
+    <string name="phone">手机号码</string>
+    <string name="phone_hint">用于接收航班信息</string>
+    <string name="email">电子邮箱</string>
+    <string name="email_hint">用于接收航班信息 (非必填)</string>
+
+    <string name="submit">提交订单</string>
 </resources>
